--- a/today.html
+++ b/today.html
@@ -94,20 +94,39 @@
     }
 
     /* Table styling */
-    table {
-      width: 100%;
-      border-collapse: collapse;
-    }
+table {
+  width: 100%;
+  border-collapse: collapse;
+  color: #fff; /* Set text color to white */
+}
 
-    table th, table td {
-      padding: 8px 12px;
-      text-align: center;
-      border: 1px solid #ddd;
-    }
+table th, table td {
+  padding: 8px 12px;
+  text-align: center;
+  border: 1px solid #ddd;
+}
 
-    table th {
-      background-color: #f4f4f4;
-    }
+table th {
+  background-color: #333; /* Dark background for header */
+  color: #fff; /* White text color for the header */
+}
+
+table tbody tr:nth-child(even) {
+  background-color: #444; /* Slightly lighter color for even rows */
+}
+
+table tbody tr:nth-child(odd) {
+  background-color: #333; /* Dark color for odd rows */
+}
+
+table th, table td {
+  padding: 10px;
+}
+
+table th {
+  text-transform: uppercase;
+}
+
   </style>
 </head>
 <body>
